[package]
name = "keysim"
version = "0.0.1"
edition = "2021"
authors = ["Nils Mathieu <nils.mathieu.contact@gmail.com>"]
description = "a crossplatform library to simulate user inputs"
readme = "README.md"
license = "MIT"
repository = "https://github.com/nils-mathieu/keysim"
documentation = "https://docs.rs/keysim"

[features]
default = ["x11"]

[target.'cfg(target_os = "linux")'.dependencies.x11]
# Only on Linux:
#  Enables support for the X11 window manager. 
version = "2"
default-features = false
optional = true
features = ["xlib", "xtest"]
